--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-pro-sidebar": "^1.1.0",
-    "react-router-dom": "^6.26.0"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.0",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
