--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-pro-sidebar": "^1.1.0",
